--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,15 +12,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FetchTest"
         tools:targetApi="31">
+
+        <!-- Main activity declaration -->
         <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
+    <!-- Add permissions -->
+    <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
